# LLM-Learn-PK

./: .gitignore  README.md
AIAgent-CrewAi/: README.md  news_search_agent.py  report.md  test.py
AIAgent-CrewAi/blog_writing_crew/: README.md  pyproject.toml  report.md
AIAgent-CrewAi/blog_writing_crew/src/blog_writing_crew/: crew.py  main.py
AIAgent-CrewAi/blog_writing_crew/src/blog_writing_crew/config/: agents.yaml  tasks.yaml
AIAgent-CrewAi/code_blog_writing/: code_output.md  formatted_blog.md  main.py
AIAgent-CrewAi/csv_analyzer/: main.py  report.md  support_tickets_data.csv  training_data.pkl
AIAgent-CrewAi/customer_support/: cleaned_customer_support_ticket_dataset.csv  customer_support.py  final_report.md
AIAgent-CrewAi/research_paper_writing/: research_paper.md  research_paper_crew.py
AIAgent-CrewAi/room_finder/: room_finder_agent.py
AIAgent-CrewAi/splitwise_with_llm/: README.MD  bill_output.md  test.py
Agno-AI-Agents/basic-testing/: basic_test_agent.py  playground.py  rag_test.py  research_agent.py  tool_calling_test.py
Chainlit-apps/crewai-documentation-bot/: README.MD  crawler.py  main.py  requirements.txt
Chainlit-apps/llama_index_doc_bot/: README.MD  crawler.py  main.py
Chainlit-apps/video_analysis_with_yolo/: test.py
Chainlit-apps/video_analyze/: test.py
DSP/: README.md  local_model.py
DSP/Coding-Chatbot/: README.MD  app.py  data_test.py  multi_hop_app.py  (+2 more)
polygon-zone-app/: README.md
resume-tailor/: .gitignore  README.MD
speed-tracking/: Readme.md  requirements.txt  speed_simple_test.py
vision-parsing/: output.md  test.py
(+85 files in other folders)
