[project]
name = "blog_writing_crew"
version = "0.1.0"
description = "blog_writing_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
blog_writing_crew = "blog_writing_crew.main:run"
run_crew = "blog_writing_crew.main:run"
train = "blog_writing_crew.main:train"
replay = "blog_writing_crew.main:replay"
test = "blog_writing_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
